# kontext

./: .claudeignore  .dockerignore  .gitignore  Dockerfile  README.md  SKILL.md  _scar_promotions.md  backfill_cloud_ops.py  brainstorm.py  codex_sync.py  db.py  digest.py  dream.py  eval_retrieval.py  eval_retrieval.yaml  export.py  graph.py  install_hooks.py  kontext_cli.py  mcp_server.py  migrate.py  pyproject.toml  requirements.txt  setup.sh  sync.py  tool_registry.md
.claude/: settings.json
cloud/: __init__.py  api.py  auth.py  client.py  codec.py  config_store.py  crypto.py  daemon.py  dashboard.py  dashboard_snapshot.py  dashboard_synth.py  keystore.py  manifest.py  models.py  replay.py  server.py  worker.py
hooks/: capture_tool.py  log_prompt.py  session_summary.py
pipeline/: ai_grader.py  brainstorm.py  chunker.py  conflicts.py  extract.py  grading.py  parsers.py
retrieval/: __init__.py  expansion.py  rrf.py
routing/: README.md  kontext_audit_keywords.py  kontext_hook_post_compact.sh  kontext_hook_session_start.sh  kontext_hook_user_prompt.sh  kontext_route.py  kontext_route_test.py  kontext_routing.example.yaml
scripts/: dedup_entries.py
static_dashboard/: data.js  index.html  styles.css
templates/: CLAUDE-protocol.md  MEMORY.md  hook-snippet.json
tests/: conftest.py  test_brainstorm.py  test_cloud_api.py  test_cloud_codec.py  test_cloud_mcp.py  test_cloud_parity.py  test_cloud_replay.py  test_cloud_schema.py  test_codex_sync.py  test_db.py  test_db_enhancements.py  test_digest.py  test_dream.py  test_eval_retrieval.py  test_export.py  (+13 more)
(+49 files in other folders)
